# nsds

./: README.md  pyproject.toml
src/nsds/: __init__.py  itables.py  logs.py  metrics.py  pandas.py  utils.py  viz.py
src/nsds/pandas/: __init__.py  core.py
src/nsds/plotly/: __init__.py  core.py
