[tool.poetry]
name = "nsds"
version = "0.1.0-alpha.7"
description = ""
authors = ["n-splv <nick.maykr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"
ipython = "^8.22.1"
tqdm = "^4.67.1"
scikit-learn = "^1.6.1"
plotly = "^5.24.1"
itables = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
